<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.example.android.popularmovies.models.MovieDetails" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="81dp" />

        <ImageView
            android:contentDescription="@string/content_description_star_icon"
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/label_rating"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintLeft_toRightOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.487" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{Double.toString(movie.voteAverage)}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            tools:text="7.3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_total"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{Integer.toString(movie.voteCount)}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            tools:text="1000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/label_users"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_video_poster"
            android:cropToPadding="true"
            app:imageUrl="@{movie.posterPath}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/cinema" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="0dp"
            android:text="@{movie.title !=null ? movie.title : @string/na}"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/imageView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/movie_language(movie.originalLanguage !=null ? movie.originalLanguage : @string/na)}"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="Language: en" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/movie_release_date(movie.releaseDate !=null ? movie.releaseDate : @string/na)}"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:text="Release Date: 12-3-5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/movie_popularity(movie.popularity)}"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:text="Popularity: 34.54" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/movie_runtime(movie.runTime)}"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="Runtime: 90 mins" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@{@string/movie_status(movie.status !=null ? movie.status : @string/na)}"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/runtime"
            tools:text="@string/label_status" />

        <TextView
            android:id="@+id/overviewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_overview"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@{movie.overview != null ? movie.overview : @string/na}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewTitle"
            tools:text="Overview content" />

    </android.support.constraint.ConstraintLayout>

</layout>